[package]
name = "xenon"
version = "0.1.0"
authors = ["Liam Greenway <ApplePiePc@outlook.com>"]
edition = "2021"
rust-version = "1.81"
description = "The Xenon Language Compiler"
readme = "README.md"
repository = "https://github.com/ApplePieCodes/xenon-rs"
license = "Apache-2.0"
keywords = ["language", "compiler", "lexer", "parser", "xenon"]
categories = ["compilers", "development-tools", "parsing"]

[lints.rust]
unsafe_code = "forbid"

[dependencies]
logos = "0.14.2"
anyhow = "1.0.82"
logex = "0.1.4"
clap = { version = "4.5.4", features = ["derive"] }
serde_yml = "0.0.11"
serde = "1.0.208"