[package]
name = "xenon-parser"
version = "0.1.7"
authors = ["Liam Greenway <Discord@ApplePieOnRye>"]
edition = "2021"
rust-version = "1.81"
description = "The Xenon Language Parser/Lexer"
readme = "README.md"
repository = "https://github.com/Xenon-Language/xenon-parser"
license = "Apache-2.0"
keywords = ["language", "compiler", "lexer", "parser", "xenon"]
categories = ["compilers", "development-tools", "parsing"]

[lints.rust]
unsafe_code = "forbid"

[dependencies]
logos = "0.14.2"
logex = "1.0.0"
serde_yml = "0.0.11"
serde = "1.0.208"